# TritMorphLLM

./: .gitignore  CITATION.cff  LICENSE  README.md  paper.tex  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: 01_quick_test.ipynb
results/: downstream_results.md  experiment_results.md  morphology_probe_detailed.csv  speed_test.md  standard_benchmarks.md
scripts/: eval_downstream.py  eval_morphology.py  eval_speed.py  eval_standard_benchmarks.py  run_experiment.py  train.py
src/: __init__.py
src/eval/: __init__.py  lm_eval_wrapper.py
src/model/: __init__.py  composition_layer.py  ternary_layers.py  tritmorph_model.py  vanilla_bpe_baseline.py
src/tokenizer/: __init__.py  hybrid_morph_bpe.py
src/utils/: data.py
